ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractWithInterface/input.ts.stderr
error[2427]: interface name is invalid
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractWithInterface/input.ts:1:1
  |
1 | abstract interface I {}
  | ^^^^^^^^

